// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation drawer component Navigation drawer renders correctly when closed 1`] = `
<DocumentFragment>
  <div
    class="MuiDrawer-root MuiDrawer-docked css-ak80xd-MuiDrawer-docked"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft css-8bwi45-MuiPaper-root-MuiDrawer-paper"
      style="visibility: hidden; webkit-transform: translateX(-0px); transform: translateX(-0px);"
    >
      <div
        class="MuiBox-root css-1pvs5pb"
      >
        <div
          class="MuiBox-root css-8xl60i"
        >
          <img
            alt="alternative-text"
            class="css-1taxr2z"
            src="stfc-logo-blue-text.png"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navigation drawer component Navigation drawer renders correctly when open 1`] = `
<DocumentFragment>
  <div
    class="MuiDrawer-root MuiDrawer-docked css-ak80xd-MuiDrawer-docked"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft css-8bwi45-MuiPaper-root-MuiDrawer-paper"
    >
      <div
        class="MuiBox-root css-1pvs5pb"
      >
        <div
          class="MuiBox-root css-8xl60i"
        >
          <img
            alt="alternative-text"
            class="css-1taxr2z"
            src="stfc-logo-blue-text.png"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
